2007-07-23  Eric Hodel  <drbrain@segment7.net>

	* lib/commands/contents_command.rb: Add --lib-only option, remove
	useless --list option.  Feature request #9498 by Martin DeMello.
	* lib/rubygems/specification.rb (Gem::Specification#lib_files):
	Restrict to only files in Gem::Specification#require_paths.

2007-07-22  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb (Gem::Specification#files): Make it
	faster
	* lib/rubygems/command.rb: Better documentation.  -v flag now lets you
	get to "really verbose" mode which makes the verbose progress meter
	work.  Add command groups to separate types of commands easily.
	* lib/rubygems/commands/which_command.rb, bin/gemwhich: Move `gemwhich`
	under `gem`.
	* lib/rubygems/commands/mirror_command.rb, bin/gem_mirror: Move
	`gem_mirror` under `gem`.
	* lib/rubygems/commands/lock_command.rb, bin/gemlock: Move `gemlock`
	under `gem`.
	* lib/rubygems/commands/server_command.rb, bin/gem_server: Move
	`gem_server` under `gem`.
	* lib/rubygems/doc_manager.rb (Gem::DocManager#initialize): Only raise
	when operating on the filesystem.
	* lib/rubygems/server.rb: Remove option processing, now in
	Gem::Commands::ServerCommand.
	* lib/rubygems/commands/generate_index.rb, bin/index_gem_repository.rb:
	Move `index_gem_repository.rb` to `gem generate_index`.
	* lib/rubygems/indexer (Gem::Indexer): Extract from
	index_gem_repository.rb and merge RubyForge changes.
	* lib/rubygems/command_manager.rb (Gem::CommandManager#run): Print
	backtrace when --debug is set too.
	* lib/rubygems/command_manager.rb (Gem::CommandManager#load_and_instantiate):
	Don't infinitely loop in retry.
	* bin/gemri: Removed.  Everybody should have ri integration now.
	* lib/rubygems/config_file.rb: Allow settings to be examined.  Pull
	settings from .gemrc.
	* lib/rubygems/commands/environment_command.rb: Add ruby executable
	and configuration settings to `gem env`.
	* lib/rubygems/indexer/indexer.rb (Gem::Indexer::Indexer#build_index):