@@ -11,6 +11,7 @@ class TestGemCommandsDependencyCommand < RubyGemTestCase
 
     @ui = MockGemUi.new
     @cmd = Gem::Commands::DependencyCommand.new
+    @cmd.options[:domain] = :local
   end
 
   def test_execute
@@ -31,11 +32,13 @@ class TestGemCommandsDependencyCommand < RubyGemTestCase
   def test_execute_no_match
     @cmd.options[:args] = %w[foo]
 
-    use_ui @ui do
-      @cmd.execute
+    assert_raise MockGemUi::TermError do
+      use_ui @ui do
+        @cmd.execute
+      end
     end
 
-    assert_equal "No match found for foo (> 0)\n\n", @ui.output
+    assert_equal "No match found for foo (> 0)\n", @ui.output
     assert_equal '', @ui.error
   end
 
@@ -80,6 +83,27 @@ Gem foo-0.0.2
     EOF
 
     assert_equal expected, @ui.output
+    assert_equal '', @ui.error
+  end
+
+  def test_execute_remote
+    foo = quick_gem 'foo' do |gem|
+      gem.add_dependency 'bar', '> 1.0.0'
+    end
+
+    util_setup_source_info_cache foo
+
+    FileUtils.rm File.join(@gemhome, 'specifications',
+                           "#{foo.full_name}.gemspec")
+
+    @cmd.options[:args] = %w[foo]
+    @cmd.options[:domain] = :remote
+
+    use_ui @ui do
+      @cmd.execute
+    end
+
+    assert_equal "Gem foo-0.0.2\n  bar (> 1.0.0)\n\n", @ui.output
     assert_equal '', @ui.error
   end
 
